# globmatch

./: .gitignore  Cargo.toml  LICENSE  deny.toml  readme.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: depr.bak  error.rs  iters.rs  lib.rs  util.rs  utils.rs  wrappers.rs
