[package]
name = "globmatch"
version = "0.1.3"
authors = ["Martin Lampacher <lmapii@gmail.com>"]
description = """
Cross platform glob matching with relative path components, against
list of candidate paths determined by recursive iteration from a root directory.
"""
documentation = "https://docs.rs/globmatch"
homepage = "https://github.com/lmapii/globmatch"
repository = "https://github.com/lmapii/globmatch"
keywords = ["glob", "walkdir", "search", "pattern"]

license-file = "LICENSE"
edition = "2021"

[lib]
name = "globmatch"
bench = false

[dependencies]
globset = "0.4.8"
walkdir = "2"

[dev-dependencies]
doc-comment = "0.3"